<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/trasparant"
android:fitsSystemWindows="true">

<RelativeLayout
    android:layout_width="@dimen/_60dp"
    android:layout_height="@dimen/_70dp"
    android:layout_marginStart="@dimen/_45dp"
    android:layout_marginEnd="@dimen/_10dp"
    android:translationZ="@dimen/_60dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginLeft="@dimen/_2dp"
        android:src="@drawable/school_logo" />

</RelativeLayout>

<RelativeLayout
    android:id="@+id/rl_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50dp"
    android:background="@color/colorPrimary"
    android:elevation="@dimen/_5dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/gps_tracker_back"
        android:layout_width="@dimen/_40dp"
        android:layout_height="@dimen/_40dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_5dp"
        android:layout_marginLeft="@dimen/_20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_8dp"
        android:src="@drawable/ic_left_arrow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_70dp"
        android:layout_marginLeft="@dimen/_90dp"
        android:layout_toEndOf="@+id/gps_tracker_back"
        android:layout_toRightOf="@+id/gps_tracker_back"
        android:includeFontPadding="false"
        android:text="WOW Mirroring Recording App"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        android:textStyle="bold" />

    <!--   <androidx.appcompat.widget.AppCompatImageView
           android:layout_width="51dp"
           android:layout_height="match_parent"
           android:layout_marginStart="@dimen/_5dp"
           android:layout_marginLeft="@dimen/_2dp"
           android:layout_toRightOf="@+id/gps_tracker_back"
           android:background="@color/red" />-->

</RelativeLayout>

<RelativeLayout
    android:id="@+id/rl_header1"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50dp"
    android:layout_below="@+id/rl_header"
    android:background="@color/colorGray"
    android:elevation="@dimen/_5dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_name8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/bluetooth_remote"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sp"
        android:textStyle="bold" />
</RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/rl_header1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp">

            <TableRow>

                <Spinner
                    android:id="@+id/cmbBondedDevices"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_span="3"
                    android:layout_weight="1" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swtConnect"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_span="1"
                    android:layout_weight="1"
                    android:text="Connect" />

            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnPower"
                        style="@style/half_button_style"
                        android:text="@string/btn_power" />

                    <Button
                        android:id="@+id/btnPair"
                        style="@style/half_button_style"
                        android:text="📶"
                        android:visibility="gone" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnUp"
                    style="@style/full_button_style"
                    android:text="@string/btn_up" />

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnMenu"
                        style="@style/half_button_style"
                        android:text="@string/btn_gear" />

                    <Button
                        android:id="@+id/btnMute"
                        style="@style/half_button_style"
                        android:text="@string/btn_mute" />

                </LinearLayout>

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btnLeft"
                    style="@style/full_button_style"
                    android:text="@string/btn_left" />

                <Button
                    android:id="@+id/btnMiddle"
                    style="@style/full_button_style"
                    android:text="@string/btn_middle" />

                <Button
                    android:id="@+id/btnRight"
                    style="@style/full_button_style"
                    android:text="@string/btn_right" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btnHome"
                    style="@style/full_button_style"
                    android:text="@string/btn_home" />

                <Button
                    android:id="@+id/btnDown"
                    style="@style/full_button_style"
                    android:text="@string/btn_down" />

                <Button
                    android:id="@+id/btnBack"
                    style="@style/full_button_style"
                    android:text="@string/btn_back" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btnRewind"
                    style="@style/full_button_style"
                    android:text="@string/btn_rewind" />

                <Button
                    android:id="@+id/btnForward"
                    style="@style/full_button_style"
                    android:text="@string/btn_forward" />

                <Button
                    android:id="@+id/btnPlayPause"
                    style="@style/full_button_style"
                    android:text="@string/btn_play_pause" />

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnVolInc"
                        style="@style/half_button_style"
                        android:text="@string/btn_vol_up" />

                    <Button
                        android:id="@+id/btnVolDec"
                        style="@style/half_button_style"
                        android:text="@string/btn_vol_down" />

                </LinearLayout>

            </TableRow>

            <TableRow>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="10"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/txtInput"
                        android:layout_width="0dip"
                        android:layout_height="55dp"
                        android:layout_weight="8"
                        android:background="@drawable/remote_edit_box"
                        android:hint="Type text here."
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_key_send"
                        android:layout_width="0dip"
                        android:layout_height="30dp"
                        android:layout_weight="2"
                        android:background="#3366ff"
                        android:text="Send"
                        android:textColor="#ffffff"
                        android:visibility="gone" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--            <LinearLayout-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="match_parent"-->
                <!--                android:orientation="horizontal">-->

                <!--                <EditText-->
                <!--                    android:id="@+id/txtInput"-->
                <!--                    android:layout_span="2"-->
                <!--                    android:hint="Type text here to send."-->
                <!--                    android:inputType="text" />-->

                <!--                <androidx.appcompat.widget.AppCompatButton-->
                <!--                    android:id="@+id/btn_send"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:text="Send" />-->
                <!--            </LinearLayout>-->
            </TableRow>

            <TableRow>



                <TextView
                    android:id="@+id/txtOut"
                    android:layout_width="match_parent"
                    android:layout_margin="2dp"
                    android:layout_span="4"
                    android:layout_weight="1" />
            </TableRow>


        </TableLayout>


    </ScrollView>

</LinearLayout>


</RelativeLayout>








