<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="@dimen/_60dp"
        android:layout_height="@dimen/_70dp"
        android:layout_marginStart="@dimen/_45dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:translationZ="@dimen/_60dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:layout_marginLeft="@dimen/_2dp"
            android:src="@drawable/school_logo" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/_5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/gps_tracker_back"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginLeft="@dimen/_20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_8dp"
            android:src="@drawable/ic_left_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_70dp"
            android:layout_marginLeft="@dimen/_90dp"
            android:layout_toEndOf="@+id/gps_tracker_back"
            android:layout_toRightOf="@+id/gps_tracker_back"
            android:includeFontPadding="false"
            android:text="WOW Mirroring Recording App"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp"
            android:textStyle="bold" />

        <!--   <androidx.appcompat.widget.AppCompatImageView
               android:layout_width="51dp"
               android:layout_height="match_parent"
               android:layout_marginStart="@dimen/_5dp"
               android:layout_marginLeft="@dimen/_2dp"
               android:layout_toRightOf="@+id/gps_tracker_back"
               android:background="@color/red" />-->

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_header1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:layout_below="@+id/rl_header"
        android:background="@color/colorGray"
        android:elevation="@dimen/_5dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_name8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/bluetooth_remote"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_header1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_header1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/remote_edit_box"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/cmbBondedDevices"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.7" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/swtConnect"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="0.3"
                        android:text="Connect" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnHome"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_home" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnMenu"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_gear" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnPower"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_power" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnVolInc"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_vol_up" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnUp"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_up" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnVolDec"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_vol_down" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLeft"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_left" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnMiddle"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_middle" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnRight"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_right" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnMute"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_mute" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnDown"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_down" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnBack"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_back" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnRewind"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_rewind" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnPlayPause"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_play_pause" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnForward"
                        style="@style/full_button_style"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:text="@string/btn_forward" />
                </LinearLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/txtInput"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/remote_edit_box"
                        android:hint="Type text here."
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_key_send"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="#3366ff"
                        android:text="Send"
                        android:textColor="#ffffff"
                        android:visibility="gone" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPair"
                    style="@style/half_button_style"
                    android:text="📶"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>


